--- a/package.json
+++ b/package.json
@@ -1,13 +1,13 @@
 {
   "name": "poketto",
-  "version": "0.0.1",
+  "version": "0.0.2",
   "description": "useful Node.js function collection",
   "main": "index.js",
   "directories": {
     "test": "test"
   },
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "mocha"
   },
   "repository": {
     "type": "git",
