Added load_config for load config file from local json file.

--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
   },
   "homepage": "https://github.com/onlinemad/node-poketto#readme",
   "devDependencies": {
-    "chai": "^3.5.0"
+    "chai": "^3.5.0",
+    "debug": "^2.6.3"
   }
 }
